target/debug/build/crossbeam-utils-ce8b14b2adf35305/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: C:\Users\hunte\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\sync\atomic.rs:2145:1
     |
2145 | / atomic_int! {
2146 | |     cfg(target_has_atomic = "16"),
2147 | |     cfg(target_has_atomic_equal_alignment = "16"),
2148 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
2161 | |     u16 AtomicU16 ATOMIC_U16_INIT
2162 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
